refactor: add filter in event
